--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/github.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template Project</title>
+    <title>Murtaza Saifuddin - Resume</title>
   </head>
   <body>
     <div id="root"></div>
